@@ -1,3 +1,8 @@
+TAG: strainload-5-1-8-1
+DATE: 04/09/2014
+STAFF: lec
+CHANGES: TR11623/EMMA strains
+
 TAG: strainload-5-1-4-6
 TAG: strainload-5-1-4-5
 TAG: strainload-5-1-4-4
